# am-modern-ui

./: .env  .env.dev.example  .env.example  .env.preprod.example  .gitattributes  .gitignore  ARCHITECTURE.md  BUILD_INTEGRATION_PLAN.md  CROSS_PLATFORM_FIXES.md  DOCKER_README.md  README.md  analysis_openapi.json  branch_diff.txt  build-dev.ps1  build-dev.sh  comments.json  diff_output.txt  docker-compose.dev.yml  docker-compose.yml  fix_ui.py  full_diff.txt  gyaan_diff.patch  gyaan_file_changes.json  gyaan_files.txt  improvement-V5.md  improvement_plan.md  issue_comments.json  other_diff.txt  package.json  pyproject.toml  reviews.json  stitch_design.html  temp_config.dart  temp_config_service.dart  trade_diff.txt
DOCUMENTATION/: Changes.md
am_ai_ui/: pubspec.yaml
am_analysis/: am_analysis_markmap.md
am_analysis_core/: pubspec.yaml
am_analysis_ui/: pubspec.yaml
am_app/: Dockerfile  README.md  am_app_markmap.md  build_log.txt  build_log_v10.txt  build_log_v2.txt  build_log_v3.txt  build_log_v4.txt  build_log_v5.txt  build_log_v6.txt  build_log_v7.txt  build_log_v8.txt  build_log_v9.txt  deps.txt  docker-entrypoint.sh  nginx-docker.conf  nginx.conf  pubspec.yaml  test_backend.dart
am_auth_ui/: pubspec.yaml
am_common/: README.md  am_common_markmap.md  pubspec.yaml
am_dashboard_ui/: am_dashboard_ui_markmap.md  analyze_output.txt  pubspec.yaml
am_design_system/: BUILD_SUMMARY.md  CLEAN_BUILD_VERIFICATION.md  am_design_system_markmap.md  analysis.txt  analysis_output.txt  analysis_output_2.txt  analysis_output_3.txt  analysis_output_4.txt  analysis_output_5.txt  (+6 more)
(+1503 files in other folders)
